--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 # Created by https://www.gitignore.io/api/swift
 # Edit at https://www.gitignore.io/?templates=swift
 
+.DS_Store
 ### Swift ###
 # Xcode
 #
